--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
- 
-    <title>New Balance Shop</title>
+
+    <title>Auron Shoes Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
